added fix for tag support